# dividend-tracker

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
data/: portfolio_aggressive.csv  portfolio_conservative.csv  portfolio_sample.csv
src/dividend_tracker/: __init__.py  __main__.py  constants.py  exceptions.py  types.py
src/dividend_tracker/api/: __init__.py  dividend_api.py
src/dividend_tracker/core/: __init__.py  calculator.py  comparison.py  historical.py  historical_storage.py  portfolio.py
src/dividend_tracker/ui/: __init__.py  dashboard.py  display.py  export.py  historical_display.py  summary_panel.py
src/dividend_tracker/utils/: __init__.py  logging_config.py
